@@ -4,6 +4,10 @@ Pylint's ChangeLog
 What's New in Pylint 1.8?
 =========================
 
+    * `abstract-class-instantiated` is now emitted for all inference paths.
+
+       Close #1673
+
     * Add set of predefined naming style to ease configuration of checking
       naming conventions.
 
